--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -2,14 +2,13 @@
     General Styles
 */
 h1 {
+    font-size: 4rem;
     font-family: 'Montserrat', sans-serif;
 }
-h2 {
+h2, h3, h4 {
     font-family: 'New Tegomin', serif;
 }
-h3 {
-     font-family: 'New Tegomin', serif;
-}
+
 .button-primary {
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
