--- a/src/front/styles/navbar.scss
+++ b/src/front/styles/navbar.scss
@@ -1,6 +1,5 @@
 nav {
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 27%, rgba(133,135,135,0.9962359943977591) 45%, rgba(0,4,5,1) 78%);
+    background-color: black;
     font-family: 'New Tegomin', serif;
     color: white;
     padding: 0px;
