--- a/src/front/styles/navbar.scss
+++ b/src/front/styles/navbar.scss
@@ -1,5 +1,5 @@
 nav {
-    background-color: black;
+    background-color: transparent !important;
     font-family: 'New Tegomin', serif;
     color: white;
     padding: 0px;
