--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -4,9 +4,11 @@
 h1 {
     font-size: 4rem;
     font-family: 'Montserrat', sans-serif;
+    line-height: 0.9em;
+    font-weight: 900;
 }
 h2, h3, h4 {
-    font-family: 'New Tegomin', serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .button-primary {
