--- a/src/front/styles/navbar.scss
+++ b/src/front/styles/navbar.scss
@@ -1,9 +1,14 @@
 nav {
-    background-color: transparent !important;
-    font-family: 'New Tegomin', serif;
+    background-color: #151416;
+    font-family: 'Lato', sans-serif;
     color: white;
     padding: 0px;
     width: auto;
+}
+.logo {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 900;    
 }
 .menu-button-navbar {
     color: white;
