--- a/src/front/styles/navbar.scss
+++ b/src/front/styles/navbar.scss
@@ -2,8 +2,10 @@ nav {
     background-color: #151416;
     font-family: 'Lato', sans-serif;
     color: white;
-    padding: 0px;
     width: auto;
+}
+.navbar {
+    padding: 1.5rem 1rem;
 }
 .logo {
     color: white;
