--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -4,7 +4,6 @@
     background-position: top;
     background-attachment: fixed;
     color: white;
-    
     padding: 2em;
     width:100%;
     height:700px;
@@ -12,16 +11,58 @@
 .bg-books {
     background-image: url(../img/library.jpeg);
     background-size: cover;
+    justify-content: flex-end;
+    align-content: center;  
     width:auto;
-    height:800px;
+    height:1000px;
     margin: auto;
+    background-attachment: fixed;
 }
 .pseudomodal {
-    text-align: center;
-    padding-top: 60px;
-    background-color: grey;
+    // 
     width: 100px;
     height: 200px;
     position: relative;
-    top: 40px; left: 300px;
+    
+}
+.title-instructions {
+    margin-bottom: 1em;
+    text-align: center;
+    
+}
+li {
+    font-size: 1.5em;
+    list-style-type: decimal;
+    padding: 0.5em;
+}
+.call-to-action {
+    -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border: solid black 1px;
+   border-radius: 20px;
+   height: 44px;
+   color: white;
+   width: auto;
+   font-size: 18px;
+   font-weight: 100;
+   background-color: black;
+//    cursor: pointer;
+//    text-align: center;
+   margin: 0.5em 0 0 8em;
+}
+.call-to-action:hover {
+    background: #ffffff;
+   border: solid black 1px;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;;
+   border-radius: 20px;
+   color: black;
+   text-decoration: none;
+   -webkit-box-shadow: 1px 1px 88px 0 rgba(105, 103, 103, 0.712);
+   -moz-box-shadow: 1px 1px 88px 0 rgba(105, 103, 103, 0.712);
+   box-shadow: 1px 1px 88px 0 rgba(105, 103, 103, 0.712);
+}
+.push-footer {
+    height: 180px;
+    width: 100%;
 }
