--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -7,7 +7,7 @@ h1 {
     line-height: 0.9em;
     font-weight: 900;
 }
-h2, h3, h4 {
+h2, h3, h4, p, li {
     font-family: 'Lato', sans-serif;
 }
 
