--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -35,6 +35,30 @@ li {
     list-style-type: decimal;
     padding: 0.5em;
 }
+
+ul{
+    counter-reset: contador;
+}
+
+li{
+    list-style: none;
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+li::before{
+    content:  counter(contador);
+    counter-increment: contador;
+    background: black;
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    display: inline-block;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
 .call-to-action {
     -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
@@ -46,12 +70,10 @@ li {
    font-size: 18px;
    font-weight: 100;
    background-color: black;
-//    cursor: pointer;
-//    text-align: center;
    margin: 0.5em 0 0 8em;
 }
 .call-to-action:hover {
-    background: #ffffff;
+   background: #ffffff;
    border: solid black 1px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;;
