--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -71,6 +71,7 @@ li::before{
    font-weight: 100;
    background-color: black;
    margin: 0.5em 0 0 8em;
+   padding: 0 2em;
 }
 .call-to-action:hover {
    background: #ffffff;
