--- a/src/front/styles/navbar.scss
+++ b/src/front/styles/navbar.scss
@@ -1,8 +1,9 @@
 nav {
-    background-color: #151416;
+    background-color: transparent;
     font-family: 'Lato', sans-serif;
     color: white;
     width: auto;
+    position: fixed;
 }
 .navbar {
     padding: 1.5rem 1rem;
