--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -5,6 +5,7 @@ body {
     background-image: linear-gradient(135deg, #667eea86 0%, #764ba28e 100%),url(../img/piemonte.jpeg);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 h1 {
     font-size: 4rem;
